--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
 </head>
 <body>
     <p>test</p>
-    <script src="./JS/main.js"></script>
+    <script src="./JS/script.js"></script>
 </body>
 </html>
