--- a/index.html
+++ b/index.html
@@ -17,66 +17,67 @@
     <main>
       <section class="stats-grid">
         <div class="stat-card green">
-          <span class="stat-title">Eficiencia General</span>
+          <span class="stat-title">Overall Efficiency</span>
           <span class="stat-value">70%</span>
         </div>
         <div class="stat-card green">
-          <span class="stat-title">Uso Energía Renovable</span>
+          <span class="stat-title">Renewable Energy Usage</span>
           <span class="stat-value">70%</span>
         </div>
         <div class="stat-card green">
-          <span class="stat-title">Reducción de CO₂</span>
+          <span class="stat-title">CO₂ Reduction</span>
           <span class="stat-value">40%</span>
         </div>
         <div class="stat-card green">
-          <span class="stat-title">Ahorro Costos</span>
+          <span class="stat-title">Cost Savings</span>
           <span class="stat-value">150</span>
         </div>
         <div class="stat-card green">
-          <span class="stat-title">Huella de Carbono</span>
+          <span class="stat-title">Carbon Footprint</span>
           <span class="stat-value">150</span>
         </div>
       </section>
       <section class="charts-grid">
         <div class="chart-card">
-          <h2>Consumo de Energía</h2>
+          <h2>Overall Efficiency</h2>
           <canvas id="chart1"></canvas>
         </div>
         <div class="chart-card">
-          <h2>Costo Diario de Energía</h2>
+          <h2>Renewable Energy Usage</h2>
           <canvas id="chart2"></canvas>
         </div>
         <div class="chart-card">
-          <h2>Huella de Carbono CO₂</h2>
+          <h2>CO₂ Reduction</h2>
           <canvas id="chart3"></canvas>
         </div>
         <div class="chart-card">
-          <h2>Capacidad de Almacenamiento</h2>
+          <h2>Storage Capacity</h2>
           <canvas id="chart4"></canvas>
         </div>
         <div class="chart-card">
-          <h2>Gráfica 5</h2>
+          <h2>Chart 5</h2>
           <canvas id="chart5"></canvas>
         </div>
         <div class="chart-card">
-          <h2>Gráfica 6</h2>
+          <h2>Chart 6</h2>
           <canvas id="chart6"></canvas>
         </div>
         <div class="chart-card">
-          <h2>Gráfica 7</h2>
+          <h2>Chart 7</h2>
           <canvas id="chart7"></canvas>
         </div>
         <div class="chart-card">
-          <h2>Gráfica 8</h2>
+          <h2>Chart 8</h2>
           <canvas id="chart8"></canvas>
         </div>
         <div class="chart-card">
-          <h2>Producción Solar Mensual</h2>
+          <h2>Monthly Solar Production</h2>
           <canvas id="chart9"></canvas>
         </div>
       </section>
     </main>
   </div>
+  <a href="PHP/logout.php">Log out</a>
   <script src="./JS/script.js"></script>
 </body>
 </html>
