--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="es">
+<html lang="en">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -21,7 +21,7 @@
           <span class="stat-value">70%</span>
         </div>
         <div class="stat-card green">
-          <span class="stat-title">Renewable Energy Usage</span>
+          <span class="stat-title">Renewable Energy Use</span>
           <span class="stat-value">70%</span>
         </div>
         <div class="stat-card green">
@@ -39,15 +39,15 @@
       </section>
       <section class="charts-grid">
         <div class="chart-card">
-          <h2>Overall Efficiency</h2>
+          <h2>Energy Consumption</h2>
           <canvas id="chart1"></canvas>
         </div>
         <div class="chart-card">
-          <h2>Renewable Energy Usage</h2>
+          <h2>Daily Energy Cost</h2>
           <canvas id="chart2"></canvas>
         </div>
         <div class="chart-card">
-          <h2>CO₂ Reduction</h2>
+          <h2>CO₂ Footprint</h2>
           <canvas id="chart3"></canvas>
         </div>
         <div class="chart-card">
@@ -77,7 +77,6 @@
       </section>
     </main>
   </div>
-  <a href="PHP/logout.php">Log out</a>
   <script src="./JS/script.js"></script>
 </body>
 </html>
