--- a/hydrogen.html
+++ b/hydrogen.html
@@ -16,9 +16,9 @@
     <a href="./car-consumption.html" class="dashboard__link" onclick="showSection('auto')">Auto</a>
   </nav>
 
-  <div id="home" class="dashboard__section dashboard__section--active">
-    <h1>Home</h1>
-    <p>Welcome to the Smart Energy Dashboard.</p>
+  <div id="hydrogen" class="dashboard__section dashboard__section--active">
+    <h1>Hydrogen</h1>
+    <p>Hydrogen production and usage info.</p>
   </div>
 
   <script src="./js/main.js"></script>
