--- a/car-consumption.html
+++ b/car-consumption.html
@@ -16,9 +16,9 @@
     <a href="./car-consumption.html" class="dashboard__link" onclick="showSection('auto')">Auto</a>
   </nav>
 
-  <div id="home" class="dashboard__section dashboard__section--active">
-    <h1>Home</h1>
-    <p>Welcome to the Smart Energy Dashboard.</p>
+  <div id="auto" class="dashboard__section dashboard__section--active">
+    <h1>Auto</h1>
+    <p>Hydrogen consumption and storage for the car.</p>
   </div>
 
   <script src="./js/main.js"></script>
