--- a/energy-use.html
+++ b/energy-use.html
@@ -16,9 +16,9 @@
     <a href="./car-consumption.html" class="dashboard__link" onclick="showSection('auto')">Auto</a>
   </nav>
 
-  <div id="home" class="dashboard__section dashboard__section--active">
-    <h1>Home</h1>
-    <p>Welcome to the Smart Energy Dashboard.</p>
+  <div id="energy" class="dashboard__section dashboard__section--active">
+    <h1>Energy Use</h1>
+    <p>Details about home energy consumption.</p>
   </div>
 
   <script src="./js/main.js"></script>
